testing out mongodb with mongoose ORM driver

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 	<head>
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="/js/socketio.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+		<script src="/js/restapitest.js"></script>
 	</head>
 	<body>
 		<h1>
