--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.12/angular.min.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+        <script src="/js/socketio.js"></script>
 	</head>
 	<body>
 		<h1>
@@ -10,7 +11,7 @@
 		</h1>
 
 		<script>
-			jQuery.post('/api/pushNodification', {
+			jQuery.post('/api/nodifications', {
 				'cons_id': '1234',
 				'task_id': '5678',
 				'site_id': '1',
@@ -25,12 +26,12 @@
 			});
 
 
-			jQuery.get('/api/pullNodifications/', function (data, textStatus, jqXHR) {
-			    console.log('Get response:');
-			    console.dir(data);
-			    console.log(textStatus);
-			    console.dir(jqXHR);
-			});
+			//jQuery.get('/api/nodifications/', function (data, textStatus, jqXHR) {
+			    //console.log('Get response:');
+			    //console.dir(data);
+			    //console.log(textStatus);
+			    //console.dir(jqXHR);
+			//});
 		</script>
 	</body>
 </html>
